// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Status container Should render status with Won bg color 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "background": "rgba(0, 255, 0, 0.2)",
      "display": "flex",
      "fontSize": "50px",
      "height": "100%",
      "justifyContent": "center",
      "left": 0,
      "position": "absolute",
      "top": 0,
      "width": "100%",
    }
  }
>
  WON
</div>
`;

exports[`Status container Should render status with lost bg color 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "background": "rgba(255, 0, 0, 0.2)",
      "display": "flex",
      "fontSize": "50px",
      "height": "100%",
      "justifyContent": "center",
      "left": 0,
      "position": "absolute",
      "top": 0,
      "width": "100%",
    }
  }
>
  LOST
</div>
`;
